--- a/seginfo/validation.properties
+++ b/seginfo/validation.properties
@@ -771,7 +771,7 @@ id=sl_svn1961_35
 
  onmouseover="gutterOver(35)"
  
-><td class="source">Validator.DNI=^(0-9){9}(A-Z)$<br></td></tr
+><td class="source">Validator.DNI=^(0-9){9}(A-Z){1}$<br></td></tr
 ><tr
 id=sl_svn1961_36
 
