--- a/seginfo/.classpath
+++ b/seginfo/.classpath
@@ -4,5 +4,31 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="lib/bcprov-jdk15on-153.jar"/>
 	<classpathentry kind="lib" path="lib/esapi-2.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/antisamy-1.4.3.jar"/>
+	<classpathentry kind="lib" path="lib/avalon-framework-4.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/batik-css-1.7.jar"/>
+	<classpathentry kind="lib" path="lib/batik-ext-1.7.jar"/>
+	<classpathentry kind="lib" path="lib/batik-util-1.7.jar"/>
+	<classpathentry kind="lib" path="lib/bsh-core-2.0b4.jar"/>
+	<classpathentry kind="lib" path="lib/commons-beanutils-1.7.0.jar"/>
+	<classpathentry kind="lib" path="lib/commons-beanutils-core-1.7.0.jar"/>
+	<classpathentry kind="lib" path="lib/commons-codec-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-collections-3.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-configuration-1.5.jar"/>
+	<classpathentry kind="lib" path="lib/commons-digester-1.8.jar"/>
+	<classpathentry kind="lib" path="lib/commons-fileupload-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-httpclient-3.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang-2.3.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/jsp-api-2.0.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.16.jar"/>
+	<classpathentry kind="lib" path="lib/logkit-1.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/nekohtml-1.9.12.jar"/>
+	<classpathentry kind="lib" path="lib/servlet-api-2.4.jar"/>
+	<classpathentry kind="lib" path="lib/xalan-2.7.0.jar"/>
+	<classpathentry kind="lib" path="lib/xercesImpl-2.8.0.jar"/>
+	<classpathentry kind="lib" path="lib/xml-apis-1.3.03.jar"/>
+	<classpathentry kind="lib" path="lib/xml-apis-ext-1.3.04.jar"/>
+	<classpathentry kind="lib" path="lib/xom-1.2.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
